--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,14 @@ DB_USER
 DB_PASSWORD
 DB_SSL_MODE
 DB_TIMEZONE
+
+JWT_ISSUER
+JWT_SECRET
+JWT_AUDIENCE
+
+RMQ_USERNAME
+RMQ_PASSWORD
+RMQ_HOST
+RMQ_PORT
+BR_CONSUMER_QUEUE
+BR_PRODUCER_QUEUE
